package pcd.assignment.common.model;

public interface Configuration {
    int getNumberOfIntervals();

    int getMaximumLines();

    int getAtMostNFiles();

}
