package pcd.assignment.common.model.data;

import pcd.assignment.common.model.data.monitor.LongestFiles;

public interface Result {

    Intervals getIntervals();

    LongestFiles getLongestFiles();

}
